Tritao: Text component supports signs for negative numbers.